--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -2,7 +2,7 @@
     "projects" : [
         {
             "image" : "images/projects/portfolio-poster.png",
-            "title": "Dev Portfolio",
+            "title": "Web Portfolio",
             "bodyText": "- Developer Portfolio Website made in React\n -  Fully customisable and dynamic, easily change data and images.\n - Dark Mode Support",
             "links": [
                 {
@@ -22,7 +22,7 @@
         },
         {
             "image" : "images/projects/caaring-poster.png",
-            "title": "Caaring -  Cab Share App",
+            "title": "Kingwewen Store -  Digital Product Website",
             "bodyText": "- A Cab Sharing web app made using **Django** for **VIT** Students. People can create a new cab or request to join an existing cab.\n - Added User authentication and password reset using **SendGrid**.\n - Deployed on **heroku** using **gunicorn**.",
             "links": [
                 {
@@ -46,7 +46,7 @@
         },
         {
             "image" : "images/projects/quiet-hours-poster.jpg",
-            "title": "Quiet Hours App",
+            "title": "Hajj and Umrah website for the Ministry of Religion",
             "bodyText": "- An Android App that **automatically silences** your phone during class hours, designed for **VITians**.\n - Option to select class **slots** and **custom time**.\n - Option to put on Vibrate instead of Silent.",
             "links": [
                 {
@@ -62,7 +62,8 @@
             ]
         },
         {
-            "title": "Secure Chat App",
+            "image" : "images/projects/quiet-hours-poster.jpg",
+            "title": "System Information Production PT. Gramasurya Yogyakarta",
             "bodyText": "- An Android App that allows users to send texts in real time.\n - End to End encryption using **RSA** Algorithm.\n - Uses **Firebase** database to store texts.\n - Secured with **Fingerprint** lock.",
             "links": [
                 {
